<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".SignupActivity">

    <View
        android:id="@+id/topBackground"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:background="#03A9F4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CyFinder"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome"
            android:textStyle="bold"
            android:textSize="48sp"
            android:layout_marginBottom="25dp"
            android:textAlignment="center"/>


        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:textSize= "20sp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/LandlordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Landlord Login"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:textColor="#0000FF"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/AdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Admin Login"
        android:backgroundTint="@color/white"
        android:textSize="16sp"
        android:textColor="#0000FF"
        android:layout_margin="16dp"
        android:clickable="true"
        android:focusable="true"

        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        />








</androidx.constraintlayout.widget.ConstraintLayout>
